# docs/spec/openAPISpec.yaml
@@ -13,7 +13,7 @@ externalDocs:
   url: 'https://lorenzaiacobuzio.atlassian.net/wiki/spaces/TA/pages/294914/To-do+list+app'
 
 servers:
-  - url: 'http://localhost:8080/v1'
+  - url: 'https://localhost:8443/v1'
 
 paths:
   /v1/status:
@@ -59,11 +59,37 @@ paths:
         '500':
           description: Server error
 
+  /v1/activitiy/{id}:
+    get:
+      summary: Get activity by ID
+      operationId: getActivity
+      parameters:
+        - name: id
+          in: query
+          description: Activity ID
+          required: true
+          schema:
+            type: UUID
+      responses:
+        '200':
+          description: Activity successfully fetched
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Activity'
+        '404':
+          description: Activity not found
+        '500':
+          description: Server error
+
 components:
   schemas:
     Activity:
       type: object
       properties:
+        id:
+          description: Activity ID
+          type: UUID
         userId:
           description: User ID the activity belongs to
           type: UUID
@@ -90,3 +116,9 @@ components:
           description: Activity frequency
           type: String
           enum: {DAILY, WEEKLY, BYWEEKLY, MONTHLY, ONCE}
+      required:
+        - id
+        - userId
+        - title
+        - dueDate
+        - frequency
